--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="javascript:;" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="http://ikoukoui.duapp.com/iphone/iphone.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="background: url(img/iphone.png) center;background-size: cover;"></div>
 						<div>
 							<h3>苹果官网</h3>
@@ -138,7 +138,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="javascript:;" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/jingdong/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="background: url(img/jd.png) center;background-size: cover;"></div>
 						<div>
 							<h3>京东首页</h3>
@@ -147,7 +147,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="javascript:;" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="http://ikoukoui.duapp.com/wangye/yintaiwang/yintai.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="background: url(img/yt.png) center;background-size: cover;"></div>
 						<div>
 							<h3>银泰网首页</h3>
@@ -156,7 +156,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="javascript:;" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="http://ikoukou.duapp.com/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="background: url(img/qx.png) center;background-size: cover;"></div>
 						<div>
 							<h3>千禧酒店网页</h3>
@@ -165,12 +165,57 @@
 							</p>
 						</div>
 					</a>
-					<a href="javascript:;" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="http://ikoukoui.duapp.com/goodnex/goodnex.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="background: url(img/good.png) center;background-size: cover;"></div>
 						<div>
 							<h3>goodnex首页</h3>
 							<p>
 								<span>应用：</span>html/css3/jquery
+							</p>
+						</div>
+					</a>
+					<a href="http://ikoukoui.duapp.com/guomei/index.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+						<div style="background: url(img/guomei.png) center;background-size: cover;"></div>
+						<div>
+							<h3>国美首页</h3>
+							<p>
+								<span>应用：</span>html/css3/jquery
+							</p>
+						</div>
+					</a>
+					<a href="http://ikoukoui.duapp.com/music/index.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+						<div style="background: url(img/music.png) center;background-size: cover;"></div>
+						<div>
+							<h3>手机music播放器</h3>
+							<p>
+								<span>应用：</span>html5/css3/jquery
+							</p>
+						</div>
+					</a>
+					<a href="https://web-kk.github.io/todo/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+						<div style="background: url(img/bainqian.png) center;background-size: cover;"></div>
+						<div>
+							<h3>手机便签</h3>
+							<p>
+								<span>应用：</span>html/css3/jquery
+							</p>
+						</div>
+					</a>
+					<a href="http://ikoukoui.duapp.com/wangye/she/scene.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+						<div style="background: url(img/snc.png) center;background-size: cover;"></div>
+						<div>
+							<h3>贪吃蛇游戏</h3>
+							<p>
+								<span>应用：</span>html/css3/jquery
+							</p>
+						</div>
+					</a>
+					<a href="http://ikoukoui.duapp.com/wangye/yidong/yidong.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+						<div style="background: url(img/yidong.png) center;background-size: cover;"></div>
+						<div>
+							<h3>移动首页</h3>
+							<p>
+								<span>应用：</span>html/css3/js
 							</p>
 						</div>
 					</a>
@@ -200,7 +245,24 @@
 					</ul>
 				</div>
 			</div>
+			<div class="can-lunbo">
+				<ul>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
 		</div>
+		
 		<!--contact-->
 		<div class="cantact-f floor">
 			<div class="cantact wbox container">
