--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<h3>MY WORKS</h3>
 				</div>
 				<div class="work-in row">
-					<a href="javascript:;" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/yuqing/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="background: url(img/bdyq.png) center;background-size: cover;"></div>
 						<div>
 							<h3>百度舆情</h3>
