--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 						<a href="javascript:;">联系方式</a>	
 					</li>
 				</ul>
+				
 				<div  class="h-right-2">
 					<a href="javascript:;" class="h-caid">
 						<i></i>
@@ -245,7 +246,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="can-lunbo">
+			<div class="can-lunbo container">
 				<ul>
 					<li></li>
 					<li></li>
