--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<!--about-->
 		<div class="about-f floor">
 			<div class="about wbox container">
-				<div class="about-title">
+				<div class="about-title title-1">
 					<h2>个人简介</h2>
 					<h1></h1>
 					<h3>ABOUT ME</h3>
@@ -112,10 +112,11 @@
 				</div>
 			</div>
 		</div>
+		<div class="addgg"></div>
 		<!--works-->
 		<div class="works-f floor">
 			<div class="work wbox container">
-				<div class="about-title">
+				<div class="about-title title-2">
 					<h2>我的作品</h2>
 					<h1></h1>
 					<h3>MY WORKS</h3>
@@ -223,10 +224,11 @@
 				</div>
 			</div>
 		</div>
+		<div class="addgg addgg-1"></div>
 		<!--can-->
 		<div class="can-f floor">
 			<div class="can wbox container">
-				<div class="about-title">
+				<div class="about-title title-3">
 					<h2>我的技能</h2>
 					<h1></h1>
 					<h3>MY SKILLS</h3>
