--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="http://ikoukoui.duapp.com/iphone/iphone.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/icall/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="background: url(img/iphone.png) center;background-size: cover;"></div>
 						<div>
 							<h3>苹果官网</h3>
@@ -149,7 +149,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="http://ikoukoui.duapp.com/wangye/yintaiwang/yintai.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/yintai/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="background: url(img/yt.png) center;background-size: cover;"></div>
 						<div>
 							<h3>银泰网首页</h3>
@@ -167,7 +167,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="http://ikoukoui.duapp.com/goodnex/goodnex.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/goodnex/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="background: url(img/good.png) center;background-size: cover;"></div>
 						<div>
 							<h3>goodnex首页</h3>
@@ -176,7 +176,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="http://ikoukoui.duapp.com/guomei/index.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/guomei/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="background: url(img/guomei.png) center;background-size: cover;"></div>
 						<div>
 							<h3>国美首页</h3>
@@ -185,7 +185,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="http://ikoukoui.duapp.com/music/index.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/music/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="background: url(img/music.png) center;background-size: cover;"></div>
 						<div>
 							<h3>手机music播放器</h3>
@@ -203,7 +203,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="http://ikoukoui.duapp.com/wangye/she/scene.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/snake/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="background: url(img/snc.png) center;background-size: cover;"></div>
 						<div>
 							<h3>贪吃蛇游戏</h3>
@@ -212,7 +212,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="http://ikoukoui.duapp.com/wangye/yidong/yidong.html" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/yidong/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<div style="background: url(img/yidong.png) center;background-size: cover;"></div>
 						<div>
 							<h3>移动首页</h3>
