--- a/index.html
+++ b/index.html
@@ -121,17 +121,28 @@
 					<h1></h1>
 					<h3>MY WORKS</h3>
 				</div>
+				<ul class="k-list row"> 
+					<li class="col-lg-1 col-md-1 col-sm-2 col-xs-4 k-active">
+						全部
+					</li>
+					<li class="col-lg-1 col-md-1 col-sm-2 col-xs-4">
+						pc端
+					</li>
+					<li class="col-lg-1 col-md-1 col-sm-2 col-xs-4">
+						手机端
+					</li>
+				</ul>
 				<div class="work-in row">
-					<a href="https://web-kk.github.io/yuqing/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/yuqing/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-pc">
 						<div style="background: url(img/bdyq.png) center;background-size: cover;"></div>
 						<div>
 							<h3>百度舆情</h3>
 							<p>
-								<span>应用：</span>html/css3/jquery
+								<span>应用：</span>fullPage.js/css3/jquery
 							</p>
 						</div>
 					</a>
-					<a href="https://web-kk.github.io/icall/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/icall/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-pc">
 						<div style="background: url(img/iphone.png) center;background-size: cover;"></div>
 						<div>
 							<h3>苹果官网</h3>
@@ -140,7 +151,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="https://web-kk.github.io/jingdong/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/jingdong/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-pc">
 						<div style="background: url(img/jd.png) center;background-size: cover;"></div>
 						<div>
 							<h3>京东首页</h3>
@@ -149,7 +160,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="https://web-kk.github.io/yintai/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/yintai/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-pc">
 						<div style="background: url(img/yt.png) center;background-size: cover;"></div>
 						<div>
 							<h3>银泰网首页</h3>
@@ -158,7 +169,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="http://ikoukou.duapp.com/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="http://ikoukou.duapp.com/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-pc">
 						<div style="background: url(img/qx.png) center;background-size: cover;"></div>
 						<div>
 							<h3>千禧酒店网页</h3>
@@ -167,7 +178,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="https://web-kk.github.io/goodnex/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/goodnex/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-pc">
 						<div style="background: url(img/good.png) center;background-size: cover;"></div>
 						<div>
 							<h3>goodnex首页</h3>
@@ -176,7 +187,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="https://web-kk.github.io/guomei/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/guomei/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-pc">
 						<div style="background: url(img/guomei.png) center;background-size: cover;"></div>
 						<div>
 							<h3>国美首页</h3>
@@ -185,7 +196,7 @@
 							</p>
 						</div>
 					</a>
-					<a href="https://web-kk.github.io/music/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/music/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-phone">
 						<div style="background: url(img/music.png) center;background-size: cover;"></div>
 						<div>
 							<h3>手机music播放器</h3>
@@ -194,8 +205,8 @@
 							</p>
 						</div>
 					</a>
-					<a href="https://web-kk.github.io/todo/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
-						<div style="background: url(img/bainqian.png) center;background-size: cover;"></div>
+					<a href="https://web-kk.github.io/todo/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-phone">
+						<div style="background: url(img/todos.jpg) center;background-size: cover;"></div>
 						<div>
 							<h3>手机便签</h3>
 							<p>
@@ -203,8 +214,8 @@
 							</p>
 						</div>
 					</a>
-					<a href="https://web-kk.github.io/snake/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
-						<div style="background: url(img/snc.png) center;background-size: cover;"></div>
+					<a href="https://web-kk.github.io/snake/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-pc">
+						<div style="background: url(img/snake.jpg) center;background-size: cover;"></div>
 						<div>
 							<h3>贪吃蛇游戏</h3>
 							<p>
@@ -212,12 +223,39 @@
 							</p>
 						</div>
 					</a>
-					<a href="https://web-kk.github.io/yidong/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<a href="https://web-kk.github.io/yidong/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-pc">
 						<div style="background: url(img/yidong.png) center;background-size: cover;"></div>
 						<div>
 							<h3>移动首页</h3>
 							<p>
 								<span>应用：</span>html/css3/js
+							</p>
+						</div>
+					</a>
+					<a href="https://web-kk.github.io/chess/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-pc">
+						<div style="background: url(img/chess.png) center;background-size: cover;"></div>
+						<div>
+							<h3>五子棋</h3>
+							<p>
+								<span>应用：</span>html5/css3/jquery
+							</p>
+						</div>
+					</a>
+					<a href="http://webkoukou.duapp.com/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-phone">
+						<div style="background: url(img/lianxi.jpg) center;background-size: cover;"></div>
+						<div>
+							<h3>手机通讯录应用</h3>
+							<p>
+								<span>应用：</span>node.js/jquery/
+							</p>
+						</div>
+					</a>
+					<a href="https://web-kk.github.io/icall/" class="box col-lg-3 col-md-3 col-sm-3 col-xs-12 k-pc">
+						<div style="background: url(img/icould.png) center;background-size: cover;"></div>
+						<div>
+							<h3>icloud备忘录</h3>
+							<p>
+								<span>应用：</span>jquery/anjular/
 							</p>
 						</div>
 					</a>
